# deploying-machine-learning-models

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  requirements.txt  setup.py
.circleci/: config.yml  continue_config.yml
.github/workflows/: pythonpackage.yml
ml_api/: Makefile  diff_test_requirements.txt  requirements.txt  run.py  run.sh
ml_api/api/: __init__.py  app.py  config.py  controller.py  main.py  schema.py  validation.py
ml_api/html/: cors-test.html
ml_api/requirements/: common.txt  dev.txt  diff_test.txt  prod.txt
ml_api/tests/: capture_model_predictions.py  conftest.py  test_controller.py  test_validation.py
ml_api/tests/differential_tests/: capture_model_predictions.py  test_differential.py
neural_network_model/: config.yml
neural_network_model/neural_network_model/: model.py  pipeline.py  predict.py
neural_network_model/neural_network_model/config/: config.py
regression_model/: Makefile  README.md  __init__.py  config.py  data_management.py  features.py  pipeline.py  predict.py  preprocessors.py  pyproject.toml  requirements.txt  train_pipeline.py
regression_model/config/: __init__.py  config.py  logging_config.py
regression_model/processing/: data_management.py  features.py  preprocessors.py
regression_model/regression_model/: __init__.py  pipeline.py  predict.py  train_pipeline.py
regression_model/regression_model/config/: __init__.py  config.py  logging_config.py
regression_model/regression_model/processing/: data_management.py  features.py  preprocessors.py  validation.py
regression_model/regression_model/tests/: test_predict.py
regression_model/regression_model/trained_models/: lasso_regression_output_v0.1.0.pkl
regression_model/tests/: test_predict.py
scripts/: fetch_kaggle_dataset.sh  publish_model.sh
(+2 files in other folders)
